# trilha-dev

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  quizzes.json  sitemap.xml  versions.json
125-126-python/: 404.html  index.html  sitemap.xml
131-variaveis/: 404.html  index.html  sitemap.xml
133-input-function/: 404.html  index.html  sitemap.xml
135-aula-005/: 404.html  index.html  sitemap.xml
141-strings/: 404.html  index.html  sitemap.xml
144-formatacao-strings/: 404.html  index.html  sitemap.xml
147-metodos-strings/: 404.html  index.html  sitemap.xml
150-151-operacoes-matematicas/: 404.html  index.html  sitemap.xml
152-158-aulas/: 404.html  index.html  sitemap.xml
179-metodos-listas/: 404.html  index.html  sitemap.xml
200_add_links_python_index/: 404.html  index.html  sitemap.xml
202_detalha_codespaces/: 404.html  index.html  sitemap.xml
61-clean-up/: 404.html  index.html  sitemap.xml
61-versioning/: 404.html  index.html  sitemap.xml
64-introducao-trilha-dev-python/: 404.html  index.html  sitemap.xml
77-section-index-pages/: 404.html  index.html  sitemap.xml
adiciona-links/: 404.html  index.html  sitemap.xml
ajustes/: 404.html  index.html  sitemap.xml
ajustes-conteudo-textual/: 404.html  index.html  sitemap.xml
alteracao-de-hiperlink/: 404.html  index.html  sitemap.xml
aulas/: index.html
aulas-028-032/: 404.html  index.html  sitemap.xml
aulas-python/: 404.html  index.html  sitemap.xml
avalia-warnings/: 404.html  index.html  sitemap.xml
certificacao/: index.html
docs/: certificacao.md  (+6 more)
(+4557 files in other folders)
